@@ -1,6 +1,7 @@
 0.9.40
 - Updates to landscape widget (now 4 horizontal with labels underneath)
 - Updates to search menu (now completely customisable)
+- Fix Similar tvshows
 
 0.9.39
 - Match PVR Info with other info dialogs
